WIIS-1958: entité ColumnVisible + enregistre affichage colonnes litiges par utilisateur + amélio affichage bouton + supprime spécifique safran litiges + fix vérif date initModal

--- a/assets/sass/_datatables_buttons.sass
+++ b/assets/sass/_datatables_buttons.sass
@@ -1,5 +1,7 @@
 .dt-buttons
 	background-image: none !important
+	.dt-button-collection
+    width: fit-content !important
 	.buttons-columnVisibility
 		background-image: none !important
 		background-color: $white !important
@@ -16,10 +18,6 @@
 		&:before
 			font-family: 'FontAwesome'
 			content: "\f0c9"
-	//.buttons-csv
-	//	&:before
-	//		font-family: 'FontAwesome'
-	//		content: "\f1c3"
 .dt-btn
 	background: $grey
 	border-radius: 4px !important
